--- a/themes/main/src/sass/_includes/mixins.scss
+++ b/themes/main/src/sass/_includes/mixins.scss
@@ -117,7 +117,6 @@
 @mixin page-name() {
   display: block;
   color: $page-title;
-  text-transform: uppercase;
   border-top: 3px solid $title-underline;
   padding-top: 8px;
   margin-bottom: 5px;
